sfdx-source/force-app/main/default/objects/MDS_Sync_Mapping__mdt/MDS_Sync_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>MDS Sync Mapping</label>
    <pluralLabel>MDS Sync Mappings</pluralLabel>
</CustomObject>