sfdx-source/force-app/main/default/objects/MDS_Sync_Mapping__mdt/fields/DDMx_Field_to_Update__c.field-meta.xml
<CustomField>
    <fullName>DDMx_Field_to_Update__c</fullName>
    <label>DDMx Field to Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>