sfdx-source/force-app/main/default/objects/MDS_Sync_Mapping__mdt/fields/DDMx_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>DDMx_Object_Name__c</fullName>
    <label>DDMx Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>