sfdx-source/force-app/main/default/objects/MDS_Sync_Mapping__mdt/fields/DDMx_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>DDMx_Update_Type__c</fullName>
    <label>DDMx Update Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>