sfdx-source/force-app/main/default/objects/MDS_Sync_Mapping__mdt/fields/Target_Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Data_Type__c</fullName>
    <label>Target Field Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>